# 3D-Chair-Generator

./: .gitignore  CMakeLists.txt  ChairMixer.cpp  ChairMixer.h  Constants.h  Mesh.cpp  Mesh.h  ObjBuffer.cpp  ObjBuffer.h  README.md  RenderMex.cpp  StandardShading.fragmentshader  StandardShading.vertexshader  W_edge.cpp  W_edge.h  chair  common.py  compress.py  dataloader.py  evaluate.py  example.blend  example.blend1  get_eval_list.py  model.py  obj_view.cpp  provider.py  rename.py  render.cpp  render.py  result_eval_2048_fileList.txt  score.py  score.txt  test.py  train.py
